--- a/SurveyEducation/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -1,3 +1,191 @@
-﻿@{
-    Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
-}   
+﻿
+        <div class="container-xxl flex-grow-1 container-p-y">
+            <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Forms/</span>Create survey</h4>
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="card mb-4">
+                        <div class="card-header ">
+                            <h5 class="mb-0">Create a questiont</h5>
+                            <!-- <small class="text-muted float-end">Default label</small> -->
+                        </div>
+                        <div class="card-body">
+                            <form>
+                                <div class="col-12 col-mb-4">
+                                    <div class="row mt-2">
+                                        <div class="col-2"> <label class="form-label" for="basic-default-fullname">Name Survey</label></div>
+                                        <div class="col-5"> <input type="text" class="form-control" id="basic-default-fullname" placeholder="Name Survey" /></div>
+                                    </div>
+                                    <div class="row mt-2">
+                                        <div class="col-2"><label class="form-label" for="basic-default-company">CreateAt</label></div>
+                                        <div class="col-5"><input type="date" class="form-control" id="basic-default-company" placeholder="Create At" /></div>
+                                    </div>
+                                    <div class="row mt-2">
+                                        <div class="col-2"><label class="form-label" for="basic-default-company">CreateedBy</label></div>
+                                        <div class="col-5"><input type="text" class="form-control" id="basic-default-company" placeholder="Createed By" /></div>
+                                    </div>
+                                </div>
+                                <button type="submit" class="btn btn-primary mt-4">Send</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-12">
+                    <div class="card mb-4">
+                        <div class="card-header ">
+                            <h5 class="mb-0">Create a questiont</h5>
+                            <!-- <small class="text-muted float-end">Default label</small> -->
+                        </div>
+                        <div class="card-body">
+                            <form>
+                                <div class="col-12 col-mb-4 mt-2">
+                                    <label class="form-label" for="basic-default-company">Question text</label>
+                                    <input type="text" class="form-control" id="basic-default-company" placeholder="Question" />
+                                </div>
+                                <div class="col-12 col-mb-4 mt-4">
+                                    <label class="form-label" for="basic-default-company">Question checkbox</label><br />
+                                    <input type="checkbox" id="vehicle1" name="vehicle3">
+                                    <label for="vehicle3"> I have a boat</label><br />
+                                    <input type="checkbox" id="vehicle2" name="vehicle3">
+                                    <label for="vehicle3"> I have a boat</label><br />
+                                    <input type="checkbox" id="vehicle3" name="vehicle3">
+                                    <label for="vehicle3"> I have a boat</label><br />
+                                    <input type="checkbox" id="vehicle4" name="vehicle3">
+                                    <label for="vehicle3"> I have a boat</label><br />
+                                    <input type="checkbox" id="vehicle5" name="vehicle3">
+                                    <label for="vehicle3"> I have a boat</label><br />
+                                    <input type="checkbox" id="vehicle6" name="vehicle3">
+                                    <label for="vehicle3"> I have a boat</label><br />
+                                    <input type="checkbox" id="vehicle7" name="vehicle3">
+                                    <label for="vehicle3"> I have a boat</label><br />
+                                    <input type="checkbox" id="vehicle8" name="vehicle3">
+                                    <label for="vehicle3"> I have a boat</label><br />
+                                </div>
+                                <div class="col-12 col-mb-4 mt-2">
+                                    <label class="form-label" for="basic-default-company">CreateedBy</label><br>
+                                    <input type="radio" id="age1" name="age" value="30">
+                                    <label for="age1">0 - 30</label><br>
+                                    <input type="radio" id="age2" name="age" value="60">
+                                    <label for="age2">31 - 60</label><br>
+                                    <input type="radio" id="age3" name="age" value="100">
+                                    <label for="age3">61 - 100</label><br><br>
+                                </div>
+                                <div class="row mt-2">
+                                    <div class="col-6 col-mb-4">
+                                        <select class="form-select col-md-6" aria-label="Default select example">
+                                            <option selected>Open this select menu</option>
+                                            <option value="1">One</option>
+                                            <option value="2">Two</option>
+                                            <option value="3">Three</option>
+                                        </select>
+                                    </div>
+                                    <div class="col-6 col-mb-4">
+                                        <select class="form-select" aria-label="Default select example">
+                                            <option selected>Open this select menu</option>
+                                            <option value="1">One</option>
+                                            <option value="2">Two</option>
+                                            <option value="3">Three</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <button type="submit" class="btn btn-primary mt-4">Send</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-12">
+                    <div class="card mb-4">
+                        <div class="card-header d-flex justify-content-between align-items-center">
+                            <h5 class="mb-0">Enter your information</h5>
+                            <small class="text-muted float-end">Merged input group</small>
+                        </div>
+                        <div class="card-body">
+                            <form>
+                                <div class="row">
+                                    <div class="col-6 mb-3">
+                                        <label class="form-label" for="basic-icon-default-fullname">First Name</label>
+                                        <div class="input-group input-group-merge">
+                                            <input type="text"
+                                                   class="form-control"
+                                                   id="basic-icon-default-fullname"
+                                                   placeholder="First Name"
+                                                   aria-describedby="basic-icon-default-fullname2" />
+                                        </div>
+                                    </div>
+                                    <div class="col-6 mb-3">
+                                        <label class="form-label" for="basic-icon-default-company">Last Name</label>
+                                        <div class="input-group input-group-merge">
+                                            <input type="text"
+                                                   id="basic-icon-default-company"
+                                                   class="form-control"
+                                                   placeholder="Last Name"
+                                                   aria-describedby="basic-icon-default-company2" />
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-6 mb-3">
+                                        <label class="form-label" for="basic-icon-default-email">Old</label>
+                                        <div class="input-group input-group-merge">
+                                            <input type="date"
+                                                   id="basic-icon-default-email"
+                                                   class="form-control"
+                                                   aria-describedby="basic-icon-default-email2" />
+                                        </div>
+                                    </div>
+                                    <div class="col-6 mb-3">
+                                        <label class="form-label" for="basic-icon-default-phone">Gender</label>
+                                        <div class="input-group input-group-merge m-3 row">
+                                            <div class="col-4">
+                                                <input type="radio" id="age1" name="age" class="ml-3">
+                                                <label for="age1">Male</label>
+                                            </div>
+                                            <div class="col-4">
+                                                <input type="radio" id="age2" name="age" class="ml-3">
+                                                <label for="age2">Female</label>
+                                            </div>
+                                            <div class="col-4">
+                                                <input type="radio" id="age3" name="age" class="ml-3">
+                                                <label for="age3">Orther</label>
+                                            </div>
+
+
+
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-6 mb-3">
+                                        <label class="form-label" for="basic-icon-default-email">Email</label>
+                                        <div class="input-group input-group-merge">
+                                            <!-- <span class="input-group-text"><i class="bx bx-envelope"></i></span> -->
+                                            <input type="text"
+                                                   id="basic-icon-default-email"
+                                                   class="form-control"
+                                                   aria-describedby="basic-icon-default-email2" />
+                                            <!-- <span id="basic-icon-default-email2" class="input-group-text">example.com</span> -->
+                                        </div>
+                                        <!-- <div class="form-text">You can use letters, numbers & periods</div> -->
+                                    </div>
+                                    <div class="col-6   mb-3">
+                                        <label class="form-label" for="basic-icon-default-phone">Phone</label>
+                                        <div class="input-group input-group-merge">
+                                            <!-- <span id="basic-icon-default-phone2" class="input-group-text"
+                                  ><i class="bx bx-phone"></i
+                                ></span> -->
+                                            <input type="text"
+                                                   id="basic-icon-default-phone"
+                                                   class="form-control phone-mask"
+                                                   placeholder="658 799 8941"
+                                                   aria-describedby="basic-icon-default-phone2" />
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <button type="submit" class="btn btn-primary">Send</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="content-backdrop fade"></div>
