--- a/SurveyEducation/Areas/Admin/Views/Shared/_Header.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Shared/_Header.cshtml
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="~/Areas/Admin/Public/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
 
     <link rel="stylesheet" href="~/Areas/Admin/Public/assets/vendor/libs/apex-charts/apex-charts.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+
 
     <!-- Page CSS -->
     <!-- Helpers -->
