--- a/SurveyEducation/Areas/Admin/Views/Survey/Create.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/Create.cshtml
@@ -2,7 +2,7 @@
     <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Forms/</span>Create survey</h4>
     <div class="row">
         <div class="col-xl-12">
-            <div class="card mb-4">
+            <div class="card mb-4">`
                 <div class="card-header">
                     <h5 class="mb-0">Create a question</h5>
                     <button id="basic-information">Toggle</button>
@@ -90,7 +90,7 @@
         
     </div>
 </div>
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js">
 </script>
 <script>
     $(document).ready(function () {
@@ -103,23 +103,25 @@
         $(".questions #question-1").click(function () {
             $("#answer-1").toggle();
         });
-        $("#question-2").click(function () {
-            $("#vehicle1").toggle();
-            $("#vehicle2").toggle();
-            $("#vehicle3").toggle();
-            $("#vehicle4").toggle();
-        });
-        // Ajax
-        $()
-        var ajxReq = $.ajax('http://time.jsontest.com', {
-            type: 'DELETE'
-        });
-        ajxReq.success(function (data, status, jqXhr) {
-            $("#vehicle1").append("Request is Success.");
-        });
-        ajxReq.error(function (jqXhr, textStatus, errorMessage) {
-            $("#vehicle1").append("Request is Fail.");
-        });
+        //$("#question-2").click(function () {
+        //    $("#vehicle1").toggle();
+        //    $("#vehicle2").toggle();
+        //    $("#vehicle3").toggle();
+        //    $("#vehicle4").toggle();
+        //});
+        //// Ajax
+        //$("#delete-button-a1").click(function () {
+        //    var ajxReq = $.ajax('http://time.jsontest.com', {
+        //        type: 'DELETE'
+        //    });
+        //    ajxReq.success(function (data, status, jqXhr) {
+        //        $("#vehicle1").append("Request is Success.");
+        //    });
+        //    ajxReq.error(function (jqXhr, textStatus, errorMessage) {
+        //        $("#vehicle1").append("Request is Fail.");
+        //    });
+        //});
+        
     });
 
    
