--- a/SurveyEducation/Areas/Admin/Views/Survey/Create.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/Create.cshtml
@@ -1,7 +1,4 @@
-﻿
-
-
-<div class="container-xxl flex-grow-1 container-p-y">
+﻿<div class="container-xxl flex-grow-1 container-p-y">
     <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Forms/</span>Create survey</h4>
     <div class="row">
         <div class="accordion mt-3" id="accordionExample">
@@ -13,7 +10,7 @@
                             data-bs-target="#accordionOne"
                             aria-expanded="true"
                             aria-controls="accordionOne">
-                        Create a questiont
+                        Basic information
                     </button>
                 </h2>
                 <div id="accordionOne"
@@ -27,15 +24,15 @@
                                         <div class="col-12 col-mb-4">
                                             <div class="row m-2">
                                                 <div class="col-2"> <label class="form-label" for="basic-default-fullname">Name Survey</label></div>
-                                                <div class="col-5"> <input type="text" class="form-control" id="basic-default-fullname" placeholder="Name Survey" /></div>
+                                                <div class="col-5"> <input type="text" class="form-control" id="name-survey" placeholder="Name Survey" /></div>
                                             </div>
                                             <div class="row m-2">
-                                                <div class="col-2"><label class="form-label" for="basic-default-company">CreateAt</label></div>
-                                                <div class="col-5"><input type="date" class="form-control" id="basic-default-company" placeholder="Create At" /></div>
+                                                <div class="col-2"><label class="form-label" for="basic-default-company">CreatedAt</label></div>
+                                                <div class="col-5"><input type="date" class="form-control" id="created-at" placeholder="Created At" /></div>
                                             </div>
                                             <div class="row m-2">
-                                                <div class="col-2"><label class="form-label" for="basic-default-company">CreateedBy</label></div>
-                                                <div class="col-5"><input type="text" class="form-control" id="basic-default-company" placeholder="Createed By" /></div>
+                                                <div class="col-2"><label class="form-label" for="basic-default-company">CreatedBy</label></div>
+                                                <div class="col-5"><input type="text" class="form-control" id="creator" placeholder="Created By" /></div>
                                             </div>
                                         </div>
                                     </form>
@@ -53,7 +50,7 @@
                             data-bs-target="#accordionTwo"
                             aria-expanded="false"
                             aria-controls="accordionTwo">
-                        Question text
+                        List question
                     </button>
                 </h2>
                 <div id="accordionTwo"
@@ -135,7 +132,7 @@
                                                             data-bs-target="#accordionTwo3"
                                                             aria-expanded="false"
                                                             aria-controls="accordionTwo3">
-                                                        CreateedBy
+                                                        CreatedBy
                                                     </button>
                                                 </h2>
                                                 <div id="accordionTwo3"
@@ -300,44 +297,7 @@
         </div>
     </div>
 </div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js">
-</script>
-<script>
-    $(document).ready(function () {
-        $("#basic-information").click(function () {
-            $(".basic-info").toggle();
-        });
-        $("#questions").click(function () {
-            $(".questions").toggle();
-        });
-        $(".questions #question-1").click(function () {
-            $("#answer-1").toggle();
-        });
-        //$("#question-2").click(function () {
-        //    $("#vehicle1").toggle();
-        //    $("#vehicle2").toggle();
-        //    $("#vehicle3").toggle();
-        //    $("#vehicle4").toggle();
-        //});
-        //// Ajax
-        //$("#delete-button-a1").click(function () {
-        //    var ajxReq = $.ajax('http://time.jsontest.com', {
-        //        type: 'DELETE'
-        //    });
-        //    ajxReq.success(function (data, status, jqXhr) {
-        //        $("#vehicle1").append("Request is Success.");
-        //    });
-        //    ajxReq.error(function (jqXhr, textStatus, errorMessage) {
-        //        $("#vehicle1").append("Request is Fail.");
-        //    });
-        //});
-        
-    });
-
-
-});
-
-</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>
     function myFunction() {
         alert("Are you sure you want to delete this survey?");
