--- a/SurveyEducation/Areas/Admin/Views/Survey/Create.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/Create.cshtml
@@ -50,15 +50,20 @@
                                  aria-labelledby="headingOne"
                                  data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <div class="row">
-                                        <div class="col-10">
-                                            <input type="text" class="form-control" id="basic-default-company" placeholder="Question" />
-                                        </div>
-                                        <div class="col">
-                                            <button type="submit" class="btn btn-submit"> <i class="fa-solid fa-pen-to-square"></i> </button>
-                                            <button type="submit" class="btn btn-submit" onclick="myFunction()">  <i class="fa-solid fa-trash-can"></i></button>
+                                    <div id="items">
+                                        <div class="itemRow">
+                                            <div class="row mt-2">
+                                                <div class="col-10">
+                                                    <input type="text" class="form-control" id="basic-default-company" placeholder="Question" />
+                                                </div>
+                                                <div class="col-2">
+                                                    <button type="submit" class="btn btn-submit"> <i class="fa-solid fa-pen-to-square"></i> </button>
+                                                    <button type="submit" class="btn btn-submit" onclick="myFunction()">  <i class="fa-solid fa-trash-can"></i></button>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
+                                    <a href="#" id="addRow">Add</a>
                                 </div>
                             </div>
                         </div>
@@ -80,22 +85,17 @@
                                 <div class="accordion-body">
 
                                     <!-- <label class="form-label" for="basic-default-company">Question checkbox</label><br> -->
-                                    <input type="checkbox" id="vehicle1" name="vehicle3">
-                                    <label for="vehicle3"> I have a boat</label><br>
-                                    <input type="checkbox" id="vehicle2" name="vehicle3">
-                                    <label for="vehicle3"> I have a boat</label><br>
-                                    <input type="checkbox" id="vehicle3" name="vehicle3">
-                                    <label for="vehicle3"> I have a boat</label><br>
-                                    <input type="checkbox" id="vehicle4" name="vehicle3">
-                                    <label for="vehicle3"> I have a boat</label><br>
-                                    <input type="checkbox" id="vehicle5" name="vehicle3">
-                                    <label for="vehicle3"> I have a boat</label><br>
-                                    <input type="checkbox" id="vehicle6" name="vehicle3">
-                                    <label for="vehicle3"> I have a boat</label><br>
-                                    <input type="checkbox" id="vehicle7" name="vehicle3">
-                                    <label for="vehicle3"> I have a boat</label><br>
-                                    <input type="checkbox" id="vehicle8" name="vehicle3">
-                                    <label for="vehicle3"> I have a boat</label><br>
+                                    <div id="items-2">
+                                        <div class="itemRow">
+                                            <div class="row">
+                                                <input class="col-md-1 mt3" type="checkbox" id="vehicle1" name="vehicle3">
+                                                <div class="col-md-11">
+                                                    <input type="text" class="form-control" id="basic-default-company" placeholder="Question" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <a href="#" id="addRow-2">Add</a>
                                 </div>
                             </div>
                         </div>
@@ -253,4 +253,58 @@
         alert("Are you sure you want to delete this survey?");
     }
 
+</script>
+
+<script type="text/javascript">
+
+        $(function () {
+
+            $("#addRow").click(function (e) {
+                e.preventDefault();
+                var template = $("#items").find(".itemRow").first();
+                var newRow = template.clone();
+                newRow.find("input.formfield").val("");
+                $("#items").append(newRow);
+
+            });
+
+            $("#addRow-2").click(function (e) {
+                e.preventDefault();
+                var template = $("#items-2").find(".itemRow").first();
+                var newRow = template.clone();
+                newRow.find("input.formfield").val("");
+                $("#items-2").append(newRow);
+
+            });
+
+            @*$("#btnSubmit").click(function (e) {
+                e.preventDefault();
+                var _this = $(this);
+                var url = _this.closest("form").attr("action");
+
+                var rows = [];
+                var items = $(".itemRow");
+
+                $.each(items, function (i, item) {
+                    var name = $(item).find("input[name='Name']").val();
+                    var age = $(item).find("input[name='Age']").val();
+                    var createDt = $(item).find("input[name='CreateDate']").val();
+
+                    var row = { Name: name, Age: age, CreateDate: createDt };
+                    rows.push(row);
+                });
+
+                //Let's post to server
+                $.ajax({
+                    type: "POST",
+                    url: url,
+                    data: JSON.stringify(rows),
+                    contentType: "application/json"
+                })
+                    .done(function (result) {
+                        //do something with the result
+                    })
+
+            });*@
+        });
 </script>
