--- a/SurveyEducation/Areas/Admin/Views/Survey/Create.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="container-xxl flex-grow-1 container-p-y">
-    <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Forms/</span>Create survey</h4>
+    <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Forms/</span>Basic information</h4>
     <div class="row">
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
@@ -49,15 +49,20 @@
                                  class="accordion-collapse collapse"
                                  aria-labelledby="headingOne"
                                  data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
+                                <div class="accordion-body-text">
                                     <div class="row">
                                         <div class="col-10">
-                                            <input type="text" class="form-control" id="basic-default-company" placeholder="Question" />
+                                            <input  type="text" onfocusout="onFocusOut()" class="form-control" id="basic-default-company" placeholder="Question" name="answer-text-1" />
                                         </div>
                                         <div class="col">
-                                            <button type="submit" class="btn btn-submit"> <i class="fa-solid fa-pen-to-square"></i> </button>
+                                            <button type="submit" class="btn btn-submit" onclick="handleEditAnswer('getAnswer')"> <i class="fa-solid fa-pen-to-square"></i> </button>
                                             <button type="submit" class="btn btn-submit" onclick="myFunction()">  <i class="fa-solid fa-trash-can"></i></button>
                                         </div>
+                                        <div class="col">
+                                            <input type="text" id="form-add-answer" class="col-md-8"/>
+                                            <input type="button" id="answer-text" class="col-md-2 m-3 mt-3" value="Add answer" />
+                                        </div>
+                                        
                                     </div>
                                 </div>
                             </div>
@@ -78,7 +83,6 @@
                                  aria-labelledby="headingTwo"
                                  data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-
                                     <!-- <label class="form-label" for="basic-default-company">Question checkbox</label><br> -->
                                     <input type="checkbox" id="vehicle1" name="vehicle3">
                                     <label for="vehicle3"> I have a boat</label><br>
@@ -87,14 +91,6 @@
                                     <input type="checkbox" id="vehicle3" name="vehicle3">
                                     <label for="vehicle3"> I have a boat</label><br>
                                     <input type="checkbox" id="vehicle4" name="vehicle3">
-                                    <label for="vehicle3"> I have a boat</label><br>
-                                    <input type="checkbox" id="vehicle5" name="vehicle3">
-                                    <label for="vehicle3"> I have a boat</label><br>
-                                    <input type="checkbox" id="vehicle6" name="vehicle3">
-                                    <label for="vehicle3"> I have a boat</label><br>
-                                    <input type="checkbox" id="vehicle7" name="vehicle3">
-                                    <label for="vehicle3"> I have a boat</label><br>
-                                    <input type="checkbox" id="vehicle8" name="vehicle3">
                                     <label for="vehicle3"> I have a boat</label><br>
                                 </div>
                             </div>
@@ -107,7 +103,7 @@
                                         data-bs-target="#accordionTwo3"
                                         aria-expanded="false"
                                         aria-controls="accordionTwo3">
-                                    CreateedBy
+                                    Question select one
                                 </button>
                             </h2>
                             <div id="accordionTwo3"
@@ -163,7 +159,6 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <button type="submit" class="btn btn-primary mt-4">Send</button> -->
                 </form>
             </div>
             <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
@@ -243,14 +238,29 @@
             </div>
         </div>
         <div class="d-flex justify-content-end">
-            <button type="submit" class="btn btn-primary col-1 mt-4">Send</button>
+            <button type="submit" class="btn btn-primary col-1 mt-4" onclick="handleSubmitButton('sendInfo')">Send</button>
         </div>
     </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>
+    function onFocusOut() {
+        var value = $("#basic-default-company").val()
+        alert(value)
+    }
+    //document.addEventListener('DOMContentLoaded', function () {
+    //    $('form[name="add-source"] input[name="btnSubmit"]').click(handleSubmitForm);
+    //})
     function myFunction() {
         alert("Are you sure you want to delete this survey?");
     }
 
+    function handleSubmitButton(event) {
+        event.preventDefault();
+    }
+    function handleEditAnswer(event) {
+        event.preventDefault();
+        let answer_text = $('input[name=answer-text-1]').val();
+        let 
+    }
 </script>
