--- a/SurveyEducation/Areas/Admin/Public/assets/css/demo.css
+++ b/SurveyEducation/Areas/Admin/Public/assets/css/demo.css
@@ -80,23 +80,25 @@
 [dir='rtl'] .rtl-only {
   display: block !important;
 }
-
+#btnDeleteAnswer li {
+    color: red;
+    background: red;
+}
 /*
 * Layout demo
 ******************************************************************************/
-
 .layout-demo-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  margin-top: 1rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    margin-top: 1rem;
 }
 .layout-demo-placeholder img {
   width: 900px;
